--- a/src/features/profile-setting/ui/profilePostModal/PostModal.module.scss
+++ b/src/features/profile-setting/ui/profilePostModal/PostModal.module.scss
@@ -43,9 +43,9 @@
 }
 
 .crop {
-  width: 492px;
-  height: 492px;
+  height: 100%;
   display: flex;
-  justify-content: center;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
